AP-16185: Code cleanup
AP-16185 (BD/ESI Code Cleanup)